fix: Enable public directory for Docker build
- Uncommented public directory in .gitignore
- Added .gitkeep to ensure directory is tracked
- Fixed Docker build error where public directory was not found

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ coverage/
 
 # Gatsby files
 .cache/
-public
+# public - commented out as we need this for Docker build
 
 # Vuepress build output
 .vuepress/dist
