fix: Use lowercase repository name for Docker registry
- Change IMAGE_NAME from github.repository to yeagoo/dommate
- Docker registries require lowercase repository names
- Fixes 'invalid reference format' error

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,7 +30,7 @@ on:
 # Environment variables
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: yeagoo/dommate
 
 # Jobs
 jobs:
