fix: Improve Docker container startup and health checks
- Add explicit PORT=3001 environment variable
- Add data volume mount for testing
- Increase health check start period to 120s for db initialization
- Increase health check retries and timeout for better reliability

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -140,6 +140,8 @@ jobs:
           docker run -d --name dommate-test \
             -p 3001:3001 \
             -e NODE_ENV=production \
+            -e PORT=3001 \
+            -v dommate-test-data:/app/data \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           
           # Check container status
