--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -38,10 +38,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    # Permissions for GHCR
+    # Permissions for GHCR and security scanning
     permissions:
       contents: read
       packages: write
+      security-events: write
     
     # Steps
     steps:
@@ -204,7 +205,8 @@ jobs:
       # Upload Trivy scan results
       - name: Upload Trivy scan results
         if: github.event_name != 'pull_request'
-        uses: github/codeql-action/upload-sarif@v2
+        continue-on-error: true
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
 
